<resources>
    <string name="app_name">TravelOverTheWorld_Xing_Lin</string>
    <string name="fuente_de_los_amantes_arq_luis_barragan">Fuente de los amantes - Arq. Luis Barragan</string>
    <string name="the_los_clubes_cuadra_san_crist_bal_y_fuente_de_los_amantes_by_architect_luis_barragan_was_built_in_atizap_n_de_zaragoza_mexico_city_in_1964_1969">The Los Clubes – Cuadra San Cristóbal y Fuente de los Amantes by architect Luis Barragan was built in Atizapán de Zaragoza, Mexico City in 1964-1969.</string>
    <string name="back">BACK</string>
    <string name="the_taj_mahal_an_immense_mausoleum_of_white_marble_is_the_jewel_of_muslim_art_in_india_built_in_agra_between_1631_and_1648_by_order_of_the_mughal_emperor_shah_jahan_in_memory_of_his_favourite_wife">The Taj Mahal, an immense mausoleum of white marble, is the jewel of Muslim art in India built in Agra between 1631 and 1648 by order of the Mughal emperor Shah Jahan in memory of his favourite wife.</string>
    <string name="marina_city_is_a_mixed_use_residential_commercial_building_complex_in_chicago_illinois_united_states_north_america_designed_by_architect_bertrand_goldberg">Marina City is a mixed-use residential-commercial building complex in Chicago, Illinois, United States, North America, designed by architect Bertrand Goldberg.</string>
    <string name="the_sydney_opera_house_in_sydney_new_south_wales_australia_is_one_of_the_most_famous_performing_arts_venues_in_the_world_designed_by_pritzker_prize_winning_architect_j_rn_utzon">The Sydney Opera House in Sydney, New South Wales, Australia, is one of the most famous performing arts venues in the world, designed by Pritzker Prize winning architect Jørn Utzon.</string>
    <string name="the_forbidden_city_in_beijing_china_is_the_largest_ancient_palatial_structure_in_the_world_constructed_in_1420_and_proudly_displays_the_essence_and_culmination_of_traditional_chinese_architecture">The Forbidden City in Beijing, China, is the largest ancient palatial structure in the world, constructed in 1420 and proudly displays the essence and culmination of traditional Chinese architecture</string>
    <string name="the_forbidden_city_in_beijing_china_is_the_largest_ancient_palatial_structure_in_the_world_constructed_in_1420_and_displays_the_essence_and_culmination_of_traditional_chinese_architecture">the_forbidden_city_in_beijing_china_is_the_largest_ancient_palatial_structure_in_the_world_constructed_in_1420_and_displays_the_essence_and_culmination_of_traditional_chinese_architecture</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_me">Register Me</string>
    <string name="open_icon">open_icon</string>
    <string name="go">Go</string>
    <string name="whitehaven_beach_is_a_7_km_stretch_known_for_its_crystal_white_silica_sands_and_turquoise_coloured_waters">Whitehaven Beach is a 7 km stretch known for its crystal white silica sands and turquoise coloured waters.</string>
    <string name="stepwells_are_ancient_water_storage_and_irrigation_tanks_also_include_embellishments_of_architectural_and_spiritual_significance">Stepwells are ancient water storage and irrigation tanks, also include embellishments of architectural and spiritual significance.</string>
    <string name="designed_by_architect_frank_gehry_the_guggenheim_museum_bilbao_building_represents_a_magnificent_example_of_the_most_groundbreaking_20th_century_architecture">Designed by architect Frank Gehry, the Guggenheim Museum Bilbao building represents a magnificent example of the most groundbreaking 20th-century architecture.</string>
    <string name="falling_water_house_is_a_house_designed_by_architect_frank_lloyd_wright_in_1935_in_rural_southwestern_pennsylvania_which_becomes_a_famous_masterpiece_in_the_architecture_history">Falling water house is a house designed by architect Frank Lloyd Wright in 1935 in rural southwestern Pennsylvania, which becomes a famous masterpiece in the architecture history</string>
</resources>
