<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="525dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="148dp"
        android:contentDescription="@string/fuente_de_los_amantes_arq_luis_barragan"
        app:srcCompat="@drawable/spain_1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="399dp"
        android:layout_height="156dp"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="517dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="1dp"
        android:text="@string/the_los_clubes_cuadra_san_crist_bal_y_fuente_de_los_amantes_by_architect_luis_barragan_was_built_in_atizap_n_de_zaragoza_mexico_city_in_1964_1969"
        android:textColor="#312828"
        android:textSize="18sp" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="32dp"
        android:text="@string/back" />
</RelativeLayout>