<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="525dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="175dp"
        android:contentDescription="@string/fuente_de_los_amantes_arq_luis_barragan"
        app:srcCompat="@drawable/australia_1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="399dp"
        android:layout_height="156dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/the_sydney_opera_house_in_sydney_new_south_wales_australia_is_one_of_the_most_famous_performing_arts_venues_in_the_world_designed_by_pritzker_prize_winning_architect_j_rn_utzon"
        android:textColor="#312828"
        android:textSize="18sp" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="32dp"
        android:text="@string/back" />
</RelativeLayout>