<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="525dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="148dp"
        android:contentDescription="@string/fuente_de_los_amantes_arq_luis_barragan"
        app:srcCompat="@drawable/america_1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="399dp"
        android:layout_height="156dp"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="525dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="-7dp"
        android:text="@string/marina_city_is_a_mixed_use_residential_commercial_building_complex_in_chicago_illinois_united_states_north_america_designed_by_architect_bertrand_goldberg"
        android:textColor="#312828"
        android:textSize="18sp" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="32dp"
        android:text="@string/back" />
</RelativeLayout>