<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="525dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="208dp"
        android:contentDescription="@string/fuente_de_los_amantes_arq_luis_barragan"
        app:srcCompat="@drawable/india_1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="399dp"
        android:layout_height="156dp"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="557dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="-38dp"
        android:text="@string/the_taj_mahal_an_immense_mausoleum_of_white_marble_is_the_jewel_of_muslim_art_in_india_built_in_agra_between_1631_and_1648_by_order_of_the_mughal_emperor_shah_jahan_in_memory_of_his_favourite_wife"
        android:textColor="#312828"
        android:textSize="18sp" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="32dp"
        android:text="@string/back" />
</RelativeLayout>